[package]
name = "rustos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2" # for the testing serial port shutdown
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # adds mapping for the shutdown/exit port
    "-serial", "stdio", # maps the serial console
    "-display", "none" # turn off display for testing
]
test-success-exit-code = 33 # 33 = (0x10 << 1) | 1
# test-timeout = 5 # timeout in seconds

[[test]]
name = "should_panic"
harness = false